feat(server): activity repository